# freya-material

./: CHANGELOG.md  Cargo.toml  README.md  icons.json
.github/: CODEOWNERS
.github/workflows/: rust.yml
examples/: button.rs  checkbox.rs  chips.rs  elevation.rs  gallery.rs  icon.rs  icon_button.rs  navigation_rail.rs  radio_button.rs  state_layer.rs  switch.rs  typography.rs
src/: button.rs  fab.rs  icon_button.rs  lib.rs  material_design.rs  rail.rs  ripple.rs  search.rs  side_sheet.rs  switch.rs
src/components/: button.rs  checkbox.rs  chips.rs  fab.rs  icon.rs  icon_button.rs  mod.rs  navigation_rail.rs  radio_button.rs  search.rs  state_layer.rs  surface.rs  switch.rs  typography.rs
