[package]
name = "freya-material"
version = "0.1.0"
edition = "2021"

[dependencies]
freya = { git = "https://github.com/marc2332/freya.git", branch = "feat/scale-effect" }
freya-transition = { git = "https://github.com/awesome-freya/freya-transition.git" }
material-colors = "0.4.2"
material-icons = { git = "https://github.com/Aiving/material-icons.git" }
once_cell = "1.20.2"
skia-safe = { version = "0.80.0", features = ["textlayout", "gl", "svg"] }
