[package]
name = "freya-material"
version = "0.1.0"
edition = "2021"

[dependencies]
freya = { git = "https://github.com/Aiving/freya.git", branch = "feat/transforms" }
freya-motion = { git = "https://github.com/awesome-freya/freya-motion.git" }
material-colors = "0.4.2"
material-icons = { git = "https://github.com/Aiving/material-icons.git" }
once_cell = "1.20.3"
skia-safe = { version = "0.81.0", features = ["textlayout", "gl", "svg"] }
